--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "child_process": "^1.0.2",
     "dateformat": "^4.5.1",
     "firebase": "^8.4.2",
     "firebase-admin": "^9.6.0",
