--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "test",
+  "name": "home",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "dependencies": {
+    "crypto": "^1.0.1",
+    "firebase": "^8.7.1",
+    "firebase-admin": "^9.10.0",
+    "fs": "^0.0.1-security",
+    "googleapis": "^81.0.0",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
+    "path": "^0.12.7",
+    "readline": "^1.3.0",
+    "websocket": "^1.0.34"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "child_process": "^1.0.2",
-    "dateformat": "^4.5.1",
-    "firebase": "^8.4.2",
-    "firebase-admin": "^9.6.0",
-    "http": "0.0.1-security",
-    "path": "^0.12.7",
-    "websocket": "^1.0.34"
-  }
+  "license": "ISC"
 }
